k8s/journal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-service
  labels:
    app: journal-system
spec:
  type: ClusterIP
  selector:
    app: journal-system
    tier: production
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
